edited icon code

--- a/index.html
+++ b/index.html
@@ -167,35 +167,35 @@
             </div>
           </div></a>
           <a href="javascript:;" class="primaery-menu-close" data-bs-dismiss="offcanvas">
-            <i class="lni lni-close"></i>
+            <i class="lni lni-xmark"></i>
           </a>
         </div>
         <div class="offcanvas-body p-0 primary-menu">
           <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
             <li class="nav-item">
               <a class="nav-link" href="/assets/page/es/index.html" aria-label="Ver el sitio en Español">
-                <div class="parent-icon"><i class="lni lni-world"></i>
+                <div class="parent-icon"><i class="lni lni-globe-1"></i>
                 </div>
                 <div class="menu-title">Español</div>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/index.html#home">
-                <div class="parent-icon"><i class="lni lni-home"></i>
+                <div class="parent-icon"><i class="lni lni-hospital-2"></i>
                 </div>
                 <div class="menu-title">Home</div>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/index.html#About">
-                <div class="parent-icon"><i class="lni lni-information"></i>
+                <div class="parent-icon"><i class="lni lni-info"></i>
                 </div>
                 <div class="menu-title">About</div>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/index.html#Services">
-                <div class="parent-icon"><i class="lni lni-briefcase"></i>
+                <div class="parent-icon"><i class="lni lni-briefcase-1"></i>
                 </div>
                 <div class="menu-title">Exposure</div>
               </a>
@@ -531,7 +531,7 @@
                   <div class="d-flex flex-column gap-4">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 bg-grd-warning text-white flex-shrink-0 mx-auto">
-                      <i class="lni lni-world fs-2"></i>
+                      <i class="lni lni-globe-1 fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Community Complaints & Surveys</h5>
@@ -839,7 +839,7 @@
         <p class="mb-0">Customize your theme</p>
       </div>
       <a href="javascript:;" class="primaery-menu-close" data-bs-dismiss="offcanvas">
-        <i class="lni lni-close"></i>
+        <i class="lni lni-xmark"></i>
       </a>
     </div>
     <div class="offcanvas-body">
