--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" href="#" data-bs-toggle="dropdown" id="pagesDropdown" role="button" aria-expanded="false">
-                <div class="parent-icon"><i class="lni lni-checkmark-circle"></i>
+                <div class="parent-icon"><i class="lni lni-check-circle-1"></i>
                 </div>
                 <div class="menu-title">Pages</div>
               </a>
               <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_audit.html"><i
                     class="lni lni-list"></i>Audit Checklist</a></li>
-                <li><a class="dropdown-item" href="/assets/page/mulchcenter_Fugitive_Emissions.html"><i class="lni lni-cloud-sync"></i>Fugitive Emissions</a></li>
+                <li><a class="dropdown-item" href="/assets/page/mulchcenter_Fugitive_Emissions.html"><i class="lni lni-cloud-iot-2"></i>Fugitive Emissions</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_occupational.html"><i
                     class="lni lni-first-aid"></i></i>Health Standards</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_Particulates.html"><i
@@ -374,13 +374,13 @@
               <div class="d-flex flex-column gap-2">
                 <h3 class="d-flex align-items-start gap-3 mb-0">Bottom line</h3>
                 <p class="d-flex align-items-start gap-3 mb-0 fw-bolder"><i
-                    class="lni lni-checkmark-circle fs-5"></i>Wood dust is carcinogenic to humans (Group 1, IARC) — strong, consistent epidemiologic evidence links occupational exposure to wood dust with adenocarcinoma of the nasal cavities / paranasal sinuses</p>
+                    class="lni lni-check-circle-1 fs-5"></i>Wood dust is carcinogenic to humans (Group 1, IARC) — strong, consistent epidemiologic evidence links occupational exposure to wood dust with adenocarcinoma of the nasal cavities / paranasal sinuses</p>
                 <p class="d-flex align-items-start gap-3 mb-0 fw-bolder"><i
-                    class="lni lni-checkmark-circle fs-5"></i>Regulatory recognition: NTP and many agencies treat wood dust as a recognized human carcinogen and/or list it for special regulatory attention.</p>
+                    class="lni lni-check-circle-1 fs-5"></i>Regulatory recognition: NTP and many agencies treat wood dust as a recognized human carcinogen and/or list it for special regulatory attention.</p>
                 <p class="d-flex align-items-start gap-3 mb-0 fw-bolder"><i
-                    class="lni lni-checkmark-circle fs-5"></i>Contemporary exposure limits vary by jurisdiction.</p>
+                    class="lni lni-check-circle-1 fs-5"></i>Contemporary exposure limits vary by jurisdiction.</p>
                 <p class="d-flex align-items-start gap-3 mb-0 fw-bolder"><i
-                    class="lni lni-checkmark-circle fs-5"></i>OSHA guidance pages and its eTool recommend controls and caution that wood dust is a carcinogen.</p>
+                    class="lni lni-check-circle-1 fs-5"></i>OSHA guidance pages and its eTool recommend controls and caution that wood dust is a carcinogen.</p>
               </div>
               <div class="mt-4">
                 <!-- <a href="javascript:;" class="btn btn-grd btn-grd-primary">Read More</a> -->
