--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_wood-dust-summary.html"><i
                     class="lni lni-bell-1"></i>Practical Controls</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_health_risks.html"><i
-                    class="lni lni-user"></i>Community Risks</a></li>
+                    class="lni lni-megaphone-1"></i>Community Risks</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_persistent_risk.html"><i
-                    class="lni lni-warning"></i>Persistent Risk</a></li>
+                    class="lni lni-helmet-safety-1"></i>Persistent Risk</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_references.html"><i
-                    class="lni lni-book"></i>References</a></li>
+                    class="lni lni-direction-ltr"></i>References</a></li>
               </ul>
             </li>
           </ul>
@@ -270,7 +270,7 @@
               <div class="d-flex flex-column flex-lg-row align-items-center gap-3 mt-5">
                 <a href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html"
                   class="btn btn-lg btn-grd btn-grd-primary d-flex align-items-center rounded-5 gap-2 raised">
-                  <i class="lni lni-dashboard"></i>Get Started
+                  <i class="lni lni-angle-double-right"></i>Get Started
                 </a>
                 <a href="/index.html#mulchcenter_pollution" class="btn btn-lg btn-light d-flex align-items-center rounded-5 gap-2 raised">
                   <i class="lni lni-play"></i>Watch Video
@@ -289,7 +289,7 @@
                   <div class="d-flex align-items-start gap-3">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 btn-grd-info text-white flex-shrink-0">
-                      <i class="lni lni-trophy fs-2"></i>
+                      <i class="lni lni-bittorrent fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Mulch Centers and Processing</h5>
@@ -305,7 +305,7 @@
                   <div class="d-flex align-items-start gap-3">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 btn-grd-danger text-white flex-shrink-0">
-                      <i class="lni lni-shield fs-2"></i>
+                      <i class="lni lni-claude fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Organic Materials</h5>
@@ -321,7 +321,7 @@
                   <div class="d-flex align-items-start gap-3">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 btn-grd-success text-white flex-shrink-0">
-                      <i class="lni lni-rocket fs-2"></i>
+                      <i class="lni lni-bulb-4 fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Take Action</h5>
