--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                 <!-- <a href="javascript:;" class="btn btn-grd btn-grd-primary">Read More</a> -->
                 <a href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html"
                   class="btn btn-grd btn-grd-primary rounded-5 d-flex align-items-center gap-2 raised px-4">
-                  Read More<i class="lni lni-arrow-right"></i>
+                  Read More<i class="lni lni-box-archive-1"></i>
                 </a>
               </div>
             </div>
@@ -471,7 +471,7 @@
                   <div class="d-flex flex-column gap-4">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 bg-grd-primary text-white flex-shrink-0 mx-auto">
-                      <i class="lni lni-heart fs-2"></i>
+                      <i class="lni lni-arrow-all-direction fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Perimeter Air Monitoring</h5>
@@ -504,7 +504,7 @@
                   <div class="d-flex flex-column gap-4">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 bg-grd-danger text-white flex-shrink-0 mx-auto">
-                      <i class="lni lni-card fs-2"></i>
+                      <i class="lni lni-vector-nodes-6 fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Dust Deposition Gauges</h5>
@@ -558,7 +558,7 @@
                   <div class="d-flex flex-column gap-4">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 bg-grd-branding text-white flex-shrink-0 mx-auto">
-                      <i class="lni lni-bank fs-2"></i>
+                      <i class="lni lni-mountains-2 fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Meteorological Tracking</h5>
@@ -601,7 +601,7 @@
                   <div class="d-flex flex-column gap-4">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 bg-grd-deep-blue text-white flex-shrink-0 mx-auto">
-                      <i class="lni lni-bar-chart fs-2"></i>
+                      <i class="lni lni-laptop-phone fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Contact Your Representative</h5>
@@ -823,7 +823,7 @@
 
 
   <!--Start Back To Top Button-->
-     <a href="javaScript:;" class="back-to-top"><i class="lni lni-arrow-up"></i></a>
+     <a href="javaScript:;" class="back-to-top"><i class="lni lni-arrow-upward"></i></a>
   <!--End Back To Top Button-->
 
   <!--start switcher-->
