--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
               </div>
             </div>
             <div class="col-12 col-xl-6">
-              <img src="/assets/images/gallery/arrows.svg" class="img-fluid" alt="Mulch Centers releaase wood dust into the air and we breath the cancer producing wood dust">
+              <img src="/assets/images/gallery/arrows.svg" class="img-fluid" alt="Mulch Centers releaase wood dust into the air and we breath the cancer producing wood dust" fetchpriority="high">
             </div>
 
           </div><!--end row-->
