--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
           </div></a>
           <a href="javascript:;" class="primaery-menu-close" data-bs-dismiss="offcanvas">
-            <i class="lni lni-xmark"></i>
+            <i class="lni lni-xmark fs-4"></i>
           </a>
         </div>
         <div class="offcanvas-body p-0 primary-menu">
@@ -837,7 +837,7 @@
         <p class="mb-0">Customize your theme</p>
       </div>
       <a href="javascript:;" class="primaery-menu-close" data-bs-dismiss="offcanvas">
-        <i class="lni lni-xmark"></i>
+        <i class="lni lni-xmark fs-4"></i>
       </a>
     </div>
     <div class="offcanvas-body">
