added closing a tab

--- a/index.html
+++ b/index.html
@@ -140,30 +140,31 @@
   <header class="top-header" id="Parent_Scroll_Div">
     <nav class="navbar navbar-expand-xl align-items-center gap-3 container px-4 px-lg-0">
       <div>
-	   <a href="/index.html" class="logo-header d-none d-xl-flex align-items-center gap-2">
-		<div class="logo-icon">
-		   <img src="/logo.svg" class="logo-img" width="45" alt="Mulch Cancer Awareness">
-		</div>
-		<div class="logo-name">
-		  <h5 class="mb-0">Mulch Cancer</h5>
-		</div>
-		</a>
+        <a href="/index.html" class="logo-header d-none d-xl-flex align-items-center gap-2">
+        <div class="logo-icon">
+		    <img src="/logo.svg" class="logo-img" width="45" alt="Mulch Cancer Awareness">
+		    </div>
+        <div class="logo-name">
+          <h5 class="mb-0">Mulch Cancer</h5>
+        </div>
+		    </a>
       </div>
       <div class="btn-toggle d-xl-none" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
-        <a href="javascript:;"><i class="lni lni-menu-hamburger-1 fs-3 fw-bold"></i>
+        <a href="javascript:;"><i class="lni lni-menu-hamburger-1 fs-3 fw-bold"></i></a>
       </div>
 
       <div class="offcanvas offcanvas-start w-260" tabindex="-1" id="offcanvasNavbar">
         <div class="offcanvas-header border-bottom h-70">
           <a href="/index.html">
-          <div class="d-flex align-items-center gap-2">
-            <div class="">
-              <img src="/logo.svg" class="logo-icon" width="45" alt="logo icon">
+            <div class="d-flex align-items-center gap-2">
+              <div class="">
+                <img src="/logo.svg" class="logo-icon" width="45" alt="logo icon">
+              </div>
+              <div class="">
+                <h4 class="logo-text">Mulch Cancer</h4>
+              </div>
             </div>
-            <div class="">
-              <h4 class="logo-text">Mulch Cancer</h4>
-            </div>
-          </div></a>
+          </a>
           <a href="javascript:;" class="primaery-menu-close" data-bs-dismiss="offcanvas">
             <i class="lni lni-xmark fs-4"></i>
           </a>
@@ -174,7 +175,8 @@
               <a class="nav-link" href="/assets/page/es/index.html" aria-label="Ver el sitio en Español">
                 <div class="parent-icon"><i class="lni lni-globe-1"></i>
                 </div>
-                <div class="menu-title">Español</div>
+                <div class="menu-title">Español
+                </div>
               </a>
             </li>
             <li class="nav-item">
