--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     class="lni lni-notebook-1"></i>Audit Checklist</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_Fugitive_Emissions.html"><i class="lni lni-cloud-iot-2"></i>Fugitive Emissions</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_occupational.html"><i
-                    class="lni lni-beat"></i></i>Health Standards</a></li>
+                    class="lni lni-beat"></i>Health Standards</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_Particulates.html"><i
                     class="lni lni-chat-bubble-2"></i>Airborne Particulates</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html"><i
