<link rel="stylesheet" href="/assets/css/lineicons.css">">

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <!-- Preconnect & Preload Fonts -->
 
-<link rel="stylesheet" href="/assets/css/lineicons.css">">
+<link rel="stylesheet" href="/assets/css/lineicons.css">
 <link href="/assets/css/fonts.css" rel="stylesheet">
 
   <!-- Pace loader (deferred) -->
