--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
               <h3 class="fw-bold mb-3 banner-heading">Neighbors can be exposed to carcinogenic wood dust from mulch centers, as handling and processing organic materials like wood chips releases fine dust into the air.</h3>
               <h5 class="mb-0 banner-paragraph">Wood dust is classified as a Group 1 carcinogen by the International Agency for Research on Cancer (IARC), linked primarily to cancers of the nasal cavity and paranasal sinuses. </h5>
               <div class="d-flex flex-column flex-lg-row align-items-center gap-3 mt-5">
-                <a href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html"
+                <a href="#About"
                   class="btn btn-lg btn-grd btn-grd-primary d-flex align-items-center rounded-5 gap-2 raised">
                   <i class="lni lni-angle-double-right"></i>Get Started
                 </a>
